package/MDAnalysis/lib/formats/include/xdrfile_trr.h

  
  /* All functions return exdrOK if succesfull. 
   * (error codes defined in xdrfile.h).
   */  
   
  /* This function returns the number of atoms in the xtc file in *natoms */
  extern int read_trr_natoms(char *fn,int *natoms);
  /* Skip through trajectory, reading headers, obtain the total number of frames in the trr */ 
  extern int read_trr_n_frames(char *fn, int *n_frames, int64_t **offsets);
  /* Read one frame of an open trr file. If either of x,v,f,box are
     NULL the arrays will be read from the file but not used.  */
  extern int read_trr(XDRFILE *xd,int natoms,int *step,float *t,float *lambda,
		      matrix box,rvec *x,rvec *v,rvec *f, int *has_prop);
  /* Write a frame to trr file */
  extern int write_trr(XDRFILE *xd,int natoms,int step,float t,float lambda,
		       matrix box,rvec *x,rvec *v,rvec *f);